Remove `DataStoreProvider.TIMEZONE` because that parameter is optional while `DataStoreProvider` should declare only essential parameters.
This is an attempt to bring a little bit of order in the mapping between parameters and option keys,
at least for the most frequently used parameters and only for the internal data store implementations.
This is done with an `URIDataStoreOption` internal enumeration in replacement to some static methods
previously defined in `URIDataStoreProvider`.